minor site header alignment fix

--- a/site/styles.css
+++ b/site/styles.css
@@ -214,7 +214,7 @@ li {
 #header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: baseline;
     gap: 1em;
 }
 
